templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jira
  name: jira
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jira
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/jira-network-bridge: "true"
        io.kompose.service: jira
    spec:
      containers:
        - env:
            - name: TZ
              value: "Asia/Ho_Chi_Minh"
            - name: ATL_PROXY_PORT
              value: "443"
            - name: ATL_TOMCAT_SCHEME
              value: "https"
            - name: ATL_TOMCAT_SECURE
              value: "true"
            - name: JAVA_OPTS
              value: "-javaagent:/atlassian-agent.jar"
            - name: ATL_PROXY_NAME
              value: "jira.baityapp.online"
            - name: JVM_CODE_CACHE_ARGS
              value: "-XX:InitialCodeCacheSize=512m -XX:ReservedCodeCacheSize=1g"
            - name: JVM_MAXIMUM_MEMORY
              value: "3g"
            - name: JVM_MINIMUM_MEMORY
              value: "512m"
          # image: minhlb314/jira:1.0
          image: leloimr/jira:9.12.1
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          name: jira
          lifecycle:
            postStart:
              exec:
                command: ['/bin/sh', '-c',
                  'cp -Rf /temp/source/jira/atlassian-agent1.jar /atlassian-agent.jar;
                   chown -R jira:jira /atlassian-agent.jar;
                   cp -Rf /temp/source/jira/server.xml /opt/jira/conf/server.xml;'
                  ]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "2Gi"
              cpu: "200m"
            limits:
              memory: "3Gi"
              cpu: "4000m"
          volumeMounts:
            - mountPath: /var/jira
              name: jira-vol
            - mountPath: /temp
              name: test-volume
      hostname: jira
      restartPolicy: Always
      volumes:
        - name: jira-vol
          persistentVolumeClaim:
            claimName: jira-vol
        - name: test-volume
          persistentVolumeClaim:
            claimName: test-pvc
status: {}
