templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jira
  name: jira
spec:
  ports:
    - name: "http"
      port: 8087
      targetPort: 8080
      nodePort: 31087
  type: NodePort
  selector:
    io.kompose.service: jira
