templates/ingress.yaml
---
# Source: dokuwiki/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jira
    app.kubernetes.io/version: 20230404.1.0
    helm.sh/chart: jira-14.7.2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
  - hosts:
    - jira.baityapp.online
    secretName: jira-tls
  ingressClassName: "nginx"
  rules:
    - host: jira.baityapp.online
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jira
                port:
                  name: http
